crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__PY313_RUF036_runtime_evaluated.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF036 [*] `None` not at the end of the type union.
 --> <filename>:2:15
  |
2 | def func(arg: None | int):
  |               ^^^^^^^^^^
3 |     ...
  |
help: Move `None` to the end of the type union
  |
2 - def func(arg: None | int):
2 + def func(arg: int | None):
  |
note: This is an unsafe fix and may change runtime behavior
