crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF008_RUF008.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:10:34
   |
10 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:20:34
   |
20 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:31:36
   |
31 |     mutable_default: 'list[int]' = []
   |                                    ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:32:52
   |
32 |     immutable_annotation: 'typing.Sequence[int]' = []
   |                                                    ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:36:51
   |
36 |     class_variable: 'typing.ClassVar[list[int]]'= []
   |                                                   ^^
   |
