crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF008_RUF008_attrs.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:13:34
   |
13 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:23:34
   |
23 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:33:34
   |
33 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:42:34
   |
42 |     mutable_default: list[int] = []
   |                                  ^^
   |
