crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF009_RUF009_attrs.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF009 Do not perform function call `default_function` in dataclass defaults
  --> RUF009_attrs.py:46:41
   |
46 |     hidden_mutable_default: list[int] = default_function()
   |                                         ^^^^^^^^^^^^^^^^^^
   |

RUF009 Do not perform function call `A` in dataclass defaults
  --> RUF009_attrs.py:47:28
   |
47 |     another_dataclass: A = A()
   |                            ^^^
   |

RUF009 Do not perform function call `ImmutableType` in dataclass defaults
  --> RUF009_attrs.py:48:34
   |
48 |     not_optimal: ImmutableType = ImmutableType(20)
   |                                  ^^^^^^^^^^^^^^^^^
   |

RUF009 Do not perform function call `F` in dataclass defaults
   --> RUF009_attrs.py:108:12
    |
108 |     f: F = F()
    |            ^^^
    |

RUF009 Do not perform function call `G` in dataclass defaults
   --> RUF009_attrs.py:109:12
    |
109 |     g: G = G()
    |            ^^^
    |

RUF009 Do not perform function call `F` in dataclass defaults
   --> RUF009_attrs.py:114:12
    |
114 |     f: F = F()
    |            ^^^
    |

RUF009 Do not perform function call `G` in dataclass defaults
   --> RUF009_attrs.py:115:12
    |
115 |     g: G = G()
    |            ^^^
    |

RUF009 Do not perform function call `F` in dataclass defaults
   --> RUF009_attrs.py:120:12
    |
120 |     f: F = F()
    |            ^^^
    |

RUF009 Do not perform function call `G` in dataclass defaults
   --> RUF009_attrs.py:121:12
    |
121 |     g: G = G()
    |            ^^^
    |

RUF009 Do not perform function call `F` in dataclass defaults
   --> RUF009_attrs.py:126:12
    |
126 |     f: F = F()
    |            ^^^
    |

RUF009 Do not perform function call `G` in dataclass defaults
   --> RUF009_attrs.py:127:12
    |
127 |     g: G = G()
    |            ^^^
    |

RUF009 Do not perform function call `list` in dataclass defaults
   --> RUF009_attrs.py:144:20
    |
144 |     x: list[int] = list()  # RUF009
    |                    ^^^^^^
    |
